Force quit when instancing smoke domain #46420

Closed
opened 2015-10-09 07:16:51 +02:00 by jesus lamas · 7 comments

Mavericks, OSX, Macbook Air
OS X 10.9.5(Mavericks), NVIDIA GeForce 320M 256 MB

2.76
Broken: (2.76 fb78f6d)
Worked: (2.73)

When baking a smoke domain, instancing it causes it to force quit blender. I've tried it on 2.73. Is it cause of openvdb changes?

add cube, quick smoke, simulate and bake, add group to smoke domain, instance group.

**Mavericks, OSX, Macbook Air** OS X 10.9.5(Mavericks), NVIDIA GeForce 320M 256 MB **2.76** Broken: (2.76 fb78f6d) Worked: (2.73) **When baking a smoke domain, instancing it causes it to force quit blender. I've tried it on 2.73. Is it cause of openvdb changes?** **add cube, quick smoke, simulate and bake, add group to smoke domain, instance group.**
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jesus650rwc

Added subscriber: @jesus650rwc

Added subscriber: @mont29

Added subscriber: @mont29

In 2.74, instancing works as expected.
in 2.75, instancing does not crash, but smoke is not instantiated either.
In 2.76 it crashes right away (segfault).

In 2.74, instancing works as expected. in 2.75, instancing does not crash, but smoke is not instantiated either. In 2.76 it crashes right away (segfault).

This issue was referenced by c8005703f2

This issue was referenced by c8005703f2989fe00901c630c009a5080c87e90b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

OK, fixed the crash in master, note however that smoke instancing does not work and (afaik) never worked in fact.

In 2.74 it seems to work in 3DView, but smoke instances would not be rendered by BI anyway…

OK, fixed the crash in master, note however that smoke instancing does not work and (afaik) never worked in fact. In 2.74 it seems to work in 3DView, but smoke instances would not be rendered by BI anyway…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46420
No description provided.